added some feature

--- a/Coupon/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Coupon/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -266,7 +266,9 @@
     <!-- Content Wrapper. Contains page content -->
     <div class="content-wrapper">
         <!-- Content Header (Page header) -->
-        @RenderBody()
+        <div class="mr-3 mt-4">
+            @RenderBody()
+        </div>
         <!-- /.content -->
     </div>
     <!-- /.content-wrapper -->
