--- a/Coupon/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Coupon/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -249,7 +249,33 @@
                                 <li class="nav-item">
                                     <a class="nav-link" asp-area="Admin" asp-controller="Discount" asp-action="UploadExcelFile">
                                         <i class="fa fa-tags nav-icon"></i>
-                                        <p>-' کروهی ایجاد کد تخفیف</p>
+                                        <p>  ایجاد کروهی کد تخفیف</p>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" asp-area="Admin" asp-controller="Discount" asp-action="Index">
+                                        <i class="fa fa-th-list nav-icon"></i>
+                                        <p>لیست کد ها</p>
+                                    </a>
+                                </li>
+
+                            </ul>
+                        </li>
+
+
+                        <li class="nav-item has-treeview">
+                            <a href="#" class="nav-link">
+                                <i class="nav-icon fa fa fa-th-list"></i>
+                                <p>
+                                    مدیریت کاربران
+                                    <i class="right fa fa-angle-left"></i>
+                                </p>
+                            </a>
+                            <ul class="nav nav-treeview" style="display: none;">
+                                <li class="nav-item">
+                                    <a class="nav-link" asp-area="Admin" asp-controller="Store" asp-action="CreateStore">
+                                        <i class="fa fa-tags nav-icon"></i>
+                                        <p>مشاهده لیست کاربران</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
