--- a/Coupon/Views/Shared/_Layout.cshtml
+++ b/Coupon/Views/Shared/_Layout.cshtml
@@ -263,13 +263,15 @@
         <ul class="nav sidebar-nav">
             <li class="dropdown">
                 <a class="ripple-effect dropdown-toggle" href="#" data-toggle="dropdown">
+                
                     <i class="ti-shine">
                     </i> سفر
+                    <b class="caret">
+                    </b>
                     <span class="sidebar-badge">
                         12
                     </span>
-                    <b class="caret">
-                    </b>
+
                 </a>
                 <ul class="dropdown-menu">
                     <li>
@@ -601,27 +603,7 @@
     <footer id="footer">
         <div class="btmFooter">
             <div class="container">
-                <div class="row">
-                    <div class="col-sm-10 col-sm-offset-1 text-center">
-                        <ul class="list-inline list-unstyled">
-                            <li>
-                                <a href="#">استرالیا</a>
-                            </li>
-                            <li>
-                                <a href="#">آمریکای شمالی</a>
-                            </li>
-                            <li>
-                                <a href="#">آمریکای جنوبی</a>
-                            </li>
-                            <li>
-                                <a href="#">هند</a>
-                            </li>
-                            <li>
-                                <a href="#">آفریقا</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
+ 
                 <div class="col-sm-12 text-center m-t-20">
                     <p>
                         <strong>
@@ -630,7 +612,7 @@
                         <i class="ti-heart">
                         </i>
                         <strong>
-                            توسط Codenpixel
+                            توسطAlireza
                         </strong>
                     </p>
                 </div>
