--- a/Coupon/wwwroot/assets/css/style.css
+++ b/Coupon/wwwroot/assets/css/style.css
@@ -6,16 +6,76 @@
 * Author: @codenpixel
 * Author URI: https://codenpixel.com
 * */
+@font-face {
+    font-family: Vazir;
+    src: url('../../dist/fonts/Vazir.eot');
+    src: url('../../dist/fonts/Vazir.eot?#iefix') format('embedded-opentype'),
+    url('../../dist/fonts/Vazir.woff2') format('woff2'),
+    url('../../dist/fonts/Vazir.woff') format('woff'),
+    url('../../dist/fonts/Vazir.ttf') format('truetype');
+    font-weight: normal;
+}
 
-@import url(https://fonts.googleapis.com/css?family=Catamaran:200,300,400,500,600,700,800,900);
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700);
+@font-face {
+    font-family: Vazir;
+    src: url('../../dist/fonts/Vazir-Bold.eot');
+    src: url('../../dist/fonts/Vazir-Bold.eot?#iefix') format('embedded-opentype'),
+    url('../../dist/fonts/Vazir-Bold.woff2') format('woff2'),
+    url('../../dist/fonts/Vazir-Bold.woff') format('woff'),
+    url('../../dist/fonts/Vazir-Bold.ttf') format('truetype');
+    font-weight: bold;
+}
+
+@font-face {
+    font-family: Vazir;
+    src: url('../../dist/fonts/Vazir-Light.eot');
+    src: url('../../dist/fonts/Vazir-Light.eot?#iefix') format('embedded-opentype'),
+    url('../../dist/fonts/Vazir-Light.woff2') format('woff2'),
+    url('../../dist/fonts/Vazir-Light.woff') format('woff'),
+    url('../../dist/fonts/Vazir-Light.ttf') format('truetype');
+    font-weight: 300;
+}
+
+@font-face {
+    font-family: Vazir;
+    src: url('../../dist/fonts/Vazir-Medium.eot');
+    src: url('../../dist/fonts/Vazir-Medium.eot?#iefix') format('embedded-opentype'),
+    url('../../dist/fonts/Vazir-Medium.woff2') format('woff2'),
+    url('../../dist/fonts/Vazir-Medium.woff') format('woff'),
+    url('../../dist/fonts/Vazir-Medium.ttf') format('truetype');
+    font-weight: 500;
+}
+
+@font-face {
+    font-family: Vazir;
+    src: url('../../dist/fonts/Vazir-Thin.eot');
+    src: url('../../dist/fonts/Vazir-Thin.eot?#iefix') format('embedded-opentype'),
+    url('../../dist/fonts/Vazir-Thin.woff2') format('woff2'),
+    url('../../dist/fonts/Vazir-Thin.woff') format('woff'),
+    url('../../dist/fonts/Vazir-Thin.ttf') format('truetype');
+    font-weight: 100;
+}
+
+@font-face {
+    font-family: Vazir;
+    src: url('../../dist/fonts/Vazir-Black.eot');
+    src: url('../../dist/fonts/Vazir-Black.eot?#iefix') format('embedded-opentype'),
+    url('../../dist/fonts/Vazir-Black.woff2') format('woff2'),
+    url('../../dist/fonts/Vazir-Black.woff') format('woff'),
+    url('../../dist/fonts/Vazir-Black.ttf') format('truetype');
+    font-weight: 900;
+}
+
 body {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Vazir', sans-serif !important;
     margin: 0;
     padding-top: 146px;
     background: #f5f6f7;
 }
 
+/*---------------------------------- End of fonts ---------------------------------- */
+
+ 
 
 /******************************************
 * Typography
@@ -2139,6 +2199,8 @@ header .header-top-links {
     float: right; /* changed from left to right */
     margin-top: 0;
     margin-bottom: 0;
+    font-family: 'Vazir', sans-serif !important;
+
 }
 
 .widget .widget-heading .widget-widgets {
@@ -2464,6 +2526,9 @@ a.thumbnail:hover {
 .coupon-title {
     margin-top: 15px;
     margin-bottom: 10px;
+
+    font-family: 'Vazir', sans-serif !important;
+
 }
 
 .coupon-title a {
